--- a/templates/main.html
+++ b/templates/main.html
@@ -75,11 +75,11 @@
     </style>
 </head>
 <body>
-    <a href="current.html">
+    <a href="{{ url_for('current') }}">
         <button class="button_to_current">Current Tenants</button>
     </a>
 
-    <a href="potential.html">
+    <a href="{{ url_for('potential') }}">
         <button class="button_to_potential">Potential Tenants</button>
     </a>
     
