--- a/templates/current.html
+++ b/templates/current.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="theme1 ">
-<link rel="stylesheet" href="current.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='current.css') }}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
 <head>
     <meta charset="UTF-8">
