--- a/templates/potential.html
+++ b/templates/potential.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="theme1">
 
-<link rel="stylesheet" href="potential.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='potential.css') }}">
 <title>Property Search </title>
 
 <head>
