--- a/templates/potential.html
+++ b/templates/potential.html
@@ -80,6 +80,8 @@
         });
         map.addControl(addressSearchControl);
     </script>
+
+    <button id = "post">Hello</button>
     
 </body>
 </html>
