--- a/templates/potential.html
+++ b/templates/potential.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="theme1">
 
+<link rel="stylesheet" href="potential.css">
 <title>Property Search </title>
 
 <head>
 <!-- Include Leaflet CSS and JS -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap">
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
@@ -13,54 +15,36 @@
 <script src="https://unpkg.com/@geoapify/leaflet-address-search-plugin@^1/dist/L.Control.GeoapifyAddressSearch.min.js"></script>
 </head>
 
-<style>
-    #map {
-        height: 400px;
-        width: 500px;
-        padding-top: 10px;
-
-    }
-    .theme1{
-        font-family: 'Roboto', sans-serif; /* Use Roboto font */
-        --textcolor:black;
-        --backgroundc:blue;
-        --accent: #fb5e00;
-        --accent1: ;
-        --accent2: #fb5e00;
-        --accent3:whitesmoke;
-        --accent4: ;
-    }
-    input[type="text"], [type="button"]{
-        font-size: 15px;
-        font-weight:300; line-height:22px; 
-        background-color:var(--backgroundc); 
-        color:var(--aacent3);
-        border-radius: 9px;
-        border:none;
-        letter-spacing: 1px;
-        }
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: var(--accent3);
-        }
-        
-</style>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello, World!</title>
+    <title>Property Search</title>
 </head>
 <body>
 
-    <!-- map cont -->
-    <div id="map"></div>
+    <!-- title cont -->
+    <div id="title-container">
+        <h1 id="title">Property Search</h1>
+    </div>
+
+    <div id="out-map" ><div id="map"></div></div>
 
     <script>
+        function popupDiv(){
+            var otr = document.createElement("div");
+            otr.setAttribute("class", "popup");
+            otr.innerHTML =  "<h2>" + "House Details: " +"</h2>" 
+                + "<br>"+ "</br>"
+                + "<div>" 
+                    //here goes house json info
+                + "</div>";
+            document.body.appendChild(otr);
+            var mapDiv = document.getElementById("out-map");
+            mapDiv.style.transition = "transform 0.5s";
+            mapDiv.style.transform = "translate(-0%, -13%)";
+        }
+
         var map = L.map('map').setView([42.2808, -83.7430], 14);
         var myAPIkey = "36fc6ce18849487b8fdad29829ac9555";
         var mapURL = `https://maps.geoapify.com/v1/tile/klokantech-basic/{z}/{x}/{y}.png?apiKey=${myAPIkey}`;
@@ -87,14 +71,16 @@
                     map.setView([address.lat, address.lon], 15);
                 }
                 //going to have leasing info
-                var popupContent = "<div>Resigning</div>";
-                marker.bindPopup(popupContent);
+                // var popupContent = "<div>Resigning</div>";
+                // marker.bindPopup(popupContent);
+                marker.on('click', () => {
+                    popupDiv();
+			    });
             },
         });
         map.addControl(addressSearchControl);
     </script>
     
-    
-    
 </body>
 </html>
+
