--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="theme1">
+<link rel="stylesheet" href="potential.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,8 +26,8 @@
         .button_to_current {
         
             padding: 20px; /* Adjust padding to make the button larger */
-            background-color: #3498db; /* Set background color */
-            color: #fff; /* Set text color */
+            background-color: var(--background-color); /* Set background color */
+            color: whitesmoke; /* Set text color */
             border: none; /* Remove default button border */
             border-radius: 0; /* Round the corners */
             text-align: center;
@@ -32,23 +35,29 @@
             justify-content: center;
             align-items:center;
             font-size: 48px; /* Adjust font size */
+            font-family: 'Montserrat', sans-serif; /* Set font family */
+            font-weight: 300; /* Set font weight to thin */
             cursor: pointer; /* Change cursor on hover */
             transition: background-color 0.3s; /* Add smooth transition for background color */
             height: 100vh;
             width: 50vw;
             
         }
+        button{
+            font-weight: 400;
+        }
 
         /* Hover effect */
         .button_to_current:hover {
-            background-color: #2980b9; /* Change background color on hover */
+            background-color: rgb(81, 126, 174); /* Change background color on hover */
+            color: var(--accent-color);
         }
         
         .button_to_potential {
             
             padding: 20px; /* Adjust padding to make the button larger */
-            background-color: #3498db; /* Set background color */
-            color: #fff; /* Set text color */
+            background-color: var(--background-color); /* Set background color */
+            color: whitesmoke; /* Set text color */
             border: none; /* Remove default button border */
             border-radius: 0; /* Round the corners */
             text-align: center;
@@ -56,6 +65,8 @@
             display: flex;
             align-items:center;
             font-size: 48px; /* Adjust font size */
+            font-family: 'Montserrat', sans-serif; /* Set font family */
+            font-weight: 300; /* Set font weight to thin */
             cursor: pointer; /* Change cursor on hover */
             transition: background-color 0.3s; /* Add smooth transition for background color */
             height: 100vh;
@@ -65,7 +76,8 @@
 
         /* Hover effect */
         .button_to_potential:hover {
-            background-color: #2980b9; /* Change background color on hover */
+            background-color: rgb(81, 126, 174); /* Change background color on hover */
+            color: var(--accent-color);
         }
         a.button_to_current,
         a.button_to_potential {
