--- a/templates/main.html
+++ b/templates/main.html
@@ -79,9 +79,13 @@
         <button class="button_to_current">Current Tenants</button>
     </a>
 
-    <a href="{{ url_for('potential') }}">
+    <!--<a href="{{ url_for('potential') }}">
         <button class="button_to_potential">Potential Tenants</button>
-    </a>
+    </a> 
+-->
+    <form method="POST" action="{{ url_for('potential') }}">
+        <button type="submit">Execute Function</button>
+    </form>
     
     
 </body>
