--- a/static/current.css
+++ b/static/current.css
@@ -1,10 +1,10 @@
-
 .theme1 {
     font-family: 'Montserrat', sans-serif;
-    --text-color: rgb(255, 255, 255);
-    --background-color: rgb(92, 145, 203);
-    --accent-color: #ffbb00;
-    --accent-text: whitesmoke;
+    --text-color: rgb(92, 145, 203); /* rgb(255, 255, 255); */
+    --background-color: whitesmoke;
+    --accent-color: #100653;
+    --accent-color1:#100653;
+    --accent-text: #ffbb00;
 }
 
 body {
@@ -79,7 +79,7 @@ button [type="reset"] {
 }
 
 button {
-    background-color: var(--accent-color);
+    background-color: var(--text-color);
     color: var(--accent-text);
     border: none;
     border-radius: 8px;
@@ -89,8 +89,14 @@ button {
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin-bottom: 20px;
+    height:40px;
+    width: 100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 button:hover {
-    background-color: darken(var(--accent-color), 10%);
+    background-color: darken(var(--text-color), 10%);
+    color:var(--accent-color);
 }
