--- a/templates/current.html
+++ b/templates/current.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src = "script.js"></script>
     <title>
     </title>
 </head>
@@ -115,7 +115,7 @@
     }
 </style>
 <body>
-    <form id = "currentPosting">
+    <form id = "currentPosting" action="{{ url_for('handle_form_submission') }}" method="post">
         <h2>General Questions</h2>
         <label for="addy">Enter your address:</label><br>
         <input type = "text" id = "addy" name = "address"><br>
@@ -158,10 +158,10 @@
         <label for = "Rent &gt;1400">&gt 1400</label><br>
         <!-- Submit Button! -->
         <br>
-        <button type="button" onclick="validateInput();dumpFormData()">Submit</button>
+        <button type="button" >Submit</button>
         <button type="reset" value="Reset">Reset</button>
     </form>
 
 </body>
-<script src = "script.js"></script>
+
 </html>
