gathering form data

--- a/templates/current.html
+++ b/templates/current.html
@@ -133,7 +133,7 @@
         <p>What was your overall experience here?</p>
         <label for="overall-slider"></label>
             <span style="font-size: 30px;">&#128169</span> 
-            <input style="width: 65%; background:grey;" type="range" id="slider" name="slider" min="0" max="100" step="1" value="50">
+            <input style="width: 65%; background:grey;" type="range" id="slider1" name="slider1" min="0" max="100" step="1" value="50">
             <span style="font-size: 30px;">&#x1f525</span>
         </label> <br><br>
 
@@ -142,10 +142,10 @@
         <p>Neighborhood vibes?</p>
         <label for="party-slider"></label>
             <span style="font-size: 30px;">	&#x1f475</span> 
-            <input style="width: 65%; background:grey;" type="range" id="slider" name="slider" min="0" max="100" step="1" value="50">
+            <input style="width: 65%; background:grey;" type="range" id="slider2" name="slider2" min="0" max="100" step="1" value="50">
             <span style="font-size: 30px;">	&#127881</span>
         </label> <br><br>
-
+        <!---
         <label for="rentRange">What is your rent range?</label><br><br>
         <input type = "radio" id = "rentRange" name = "Rent &lt;800" value = "YES">
         <label for = "Rent &lt;800">&lt 800</label><br>
@@ -157,6 +157,8 @@
         <label for = "Rent 1200-1400">1200-1400</label><br>
         <input type = "radio" id = "rentRange" name = "Rent &gt;1400" value = "YES">
         <label for = "Rent &gt;1400">&gt 1400</label><br>
+
+        -->
         <!-- Submit Button! -->
         <br>
         <a href="{{ url_for('potential') }}">
