--- a/templates/current.html
+++ b/templates/current.html
@@ -159,6 +159,9 @@
         <label for = "Rent &gt;1400">&gt 1400</label><br>
 
         -->
+
+        <label for="rentRange">What is your rent?</label><br><br>
+        <input type = "number" id = "rent" name = "Rent">
         <!-- Submit Button! -->
         <br>
         <a href="{{ url_for('potential') }}">
