--- a/templates/potential.html
+++ b/templates/potential.html
@@ -105,6 +105,7 @@
 
                 // Store the data for future use (e.g., in local storage)
                 localStorage.setItem('cachedData', JSON.stringify(data));
+                return JSON.stringify(data);
             } catch (error) {
                 console.error('Error fetching data:', error);
             }
@@ -123,7 +124,7 @@
                 console.error('Error fetching data:', error);
             }
         }
-        fetchData();
+        let res = fetchData();
         // Check if the data is already cached in local storage
         const cachedData = localStorage.getItem('cachedData');
         let i = 0;
@@ -158,8 +159,6 @@
         }
 
         if(cachedData) {
-            const parsedData = JSON.parse(cachedData);
-            console.log(parsedData);
             updateDisplay();
         }else{
             fetchData();
